updated the memory